--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,10 @@
 
 # Files
 numbers.h
-*.cproject
-*.ino.cpp
-*.project
+.cproject
+.ino.cpp
+.project
 
 # Folders
 Release/
-*.settings/
+.settings/
